5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1575_1326.log
== TEST (2019-03-12 11:19:51) 
-- CODE:
print("R$75,00")
-- OUTPUT:
R$75,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:19:55) 
-- CODE:
print("R$75,00")
-- EXECUTION TIME:
0.241832
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$75,00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:20:33) 
-- CODE:
print(R$75,00)
-- ERROR:
File "XXXX", line 1
    print(R$75,00)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:20:37) 
-- CODE:
print(R$75,00)
-- EXECUTION TIME:
0.204976
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    print(R$75,00)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:20:59) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:21:01) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.12391
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 11:19:37) 
-- CODE:
print("morte.".upper())
-- OUTPUT:
MORTE.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 11:23:48) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 11:23:51) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.235628
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
